--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
 
   --hero-transperent-color: rgba(47, 48, 58, 0.4);
   --footer-social-icon-bg: rgba(255, 255, 255, 0.1);
+  --backdrop-bg: rgba(0, 0, 0, 0.2);
 }
 
 body {
@@ -82,18 +83,20 @@ li {
   /* outline: solid 2px tomato; */
 }
 /* Хедер */
+
 .nav-link {
+  position: relative;
   display: block;
   padding-top: 31px;
   padding-bottom: 31px;
-
   color: var(--primary-text-color);
-
   text-decoration: none;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
@@ -101,6 +104,22 @@ li {
   color: var(--accent-color);
 }
 
+.current::after {
+  position: absolute;
+  bottom: 0;
+  content: '';
+  display: block;
+  background-color: var(--accent-color);
+  color: var(--accent-color);
+  height: 4px;
+  width: 100%;
+  border-radius: 2px;
+  opacity: 1;
+}
+
+.current {
+  color: var(--accent-color);
+}
 .site-nav,
 .main-nav {
   display: flex;
@@ -111,6 +130,7 @@ li {
   align-items: center;
   margin-left: 93px;
 }
+
 .header-main {
   display: flex;
   align-items: center;
@@ -141,6 +161,8 @@ li {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-item:hover,
 .contact-item:focus {
@@ -371,6 +393,9 @@ h2 {
   border-radius: 50%;
   padding: 12px;
   fill: var(--client-logo-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-team-icon {
@@ -400,6 +425,9 @@ h2 {
   border-radius: 4px;
   padding: 16px 32px;
   color: var(--client-logo-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-icon {
@@ -412,6 +440,7 @@ h2 {
 .client-button:focus {
   border: var(--accent-color) solid 1px;
   color: var(--accent-color);
+  fill: var(--accent-color);
 }
 
 /* Портфоліо */
@@ -430,6 +459,10 @@ h2 {
   letter-spacing: 0.03em;
   border-radius: 4px;
   padding: 6px 22px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-filter:hover,
 .button-filter:focus {
@@ -479,6 +512,9 @@ h2 {
   border: 1px solid var(--stroke-color);
   margin-right: 30px;
   margin-bottom: 30px;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .cards-item:nth-child(3n) {
   margin-right: 0;
@@ -486,51 +522,46 @@ h2 {
 .cards-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.cards-item:hover,
-.cards-item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-  opacity: 1;
-}
 
 .card-thumb {
   position: relative;
+  overflow: hidden;
   display: flex;
   align-items: center;
 }
-.card-thumb::before {
-  display: inline-block;
+
+.coment-overlay {
   position: absolute;
-  content: '';
+  top: 294px;
   width: 100%;
   height: 100%;
   background-color: var(--accent-color-card);
-  opacity: 0;
-}
-
-.card-thumb:hover:before {
-  opacity: 1;
-}
-.card-coment:focus,
-.card-coment:hover {
-  opacity: 1;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-coment {
   position: absolute;
   display: block;
-
+  top: 0;
   width: 100%;
   height: 100%;
   padding: 63px 24px;
   font-size: 18px;
   line-height: 1.55;
   color: var(--white-color);
-  opacity: 0;
-
-  /* or 156% */
   letter-spacing: 0.03em;
 }
+
+.cards-item:hover .coment-overlay,
+.cards-item:focus .coment-overlay {
+  transform: translateY(-294px);
+}
+.cards-item:hover,
+.cards-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 /* Футер */
 .footer {
   background-color: var(--bg-primary-color);
@@ -544,6 +575,8 @@ h2 {
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration: none;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-footer:hover,
 .address-footer:focus {
@@ -556,6 +589,8 @@ h2 {
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration: none;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-footer:hover,
 .contact-footer:focus {
@@ -582,6 +617,8 @@ h2 {
   border-radius: 50%;
   background-color: var(--footer-social-icon-bg);
   padding: 12px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-footer-link:hover,
 .social-footer-link:focus {
@@ -608,4 +645,56 @@ h2 {
 }
 .join {
   display: flex;
+}
+
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+    background-color: var(--backdrop-bg);
+  opacity: 1;
+
+  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.1);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 528px;
+  height: 581px;
+  border-radius: 4px;
+  background-color: var(--white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+
+.close-modal {
+  position: absolute;
+  display: block;
+  padding: 0;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: var(--white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
